styles/pages/_Home.scss
/*
 * This file is part of Search NEU and licensed under AGPL3.
 * See the license file in the root folder for details.
 */

@use '../variables' as Colors;
@use '../zIndexes' as Indexes;
@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');

.home-container {
  height: 100%;
  position: relative;

  .displayNone {
    display: none;
  }

  .subjectContaineRowContainer {
    display: flex;
    margin-bottom: 4px;
    text-align: center;
    margin-top: 5px;
  }

  /* Desktop. */
  @media only screen and (min-width: 767px) {
    .subjectContaineRowContainer {
      min-height: 25px;
    }
  }

  .subjectContaineRow {
    font-size: 19px;
    color: Colors.$Grey;
    margin-left: auto;
    align-self: flex-end;
    margin-right: auto;
  }

  .topHeader {
    display: flex !important;
    min-height: 750px;
    align-items: center;
    margin-bottom: 0 !important;
    height: 100vh;
    position: relative;
    // Since this is a gradient that doesn't really go with other colors
    // on the SearchNEU color palette, they can stay as rgba values
    background: linear-gradient(
      180deg,
      rgba(168, 218, 220, 0.66) 3.86%,
      rgba(168, 218, 220, 0.66) 54.45%,
      rgba(189, 204, 174, 0.538607) 68.57%,
      rgba(208, 191, 131, 0.424862) 78.28%,
      rgba(255, 159, 28, 0.67) 103.17%
    );
  }

  .centerTextContainer {
    flex-basis: 600px;
    padding-bottom: 8%;
    text-align: center;
    margin: 0 auto;
    padding: 0 12px;

    @media only screen and (min-width: 1100px) {
      text-align: left;
      margin: 0;
      margin-left: 10% !important;
    }
  }

  .logo {
    height: 60px;
    z-index: Indexes.$Five;
    margin-bottom: 10px;

    @media only screen and (min-width: 830px) {
      height: 112px;
      margin-bottom: 20px;
      margin-right: 20px;
    }
  }

  .husky {
    width: 260px !important;
    height: auto !important;
    position: absolute;
    right: -20px;
    bottom: -50px;
    z-index: Indexes.$Ten;

    // there is definitely a better way to scale the width/position
    // but for now there is just a bunch of media queries
    @media only screen and (min-width: 767px) {
      width: 280px !important;
      right: -20px;
    }

    @media only screen and (min-width: 1025px) {
      width: 310px !important;
      right: -20px;
    }

    @media only screen and (min-width: 1200px) {
      width: 380px !important;
      right: -30px;
    }

    @media only screen and (min-width: 1400px) {
      width: 35vw !important;
      right: -40px;
    }
  }

  .bostonContainer {
    width: 100%;
    position: absolute;
    bottom: 0;
    text-align: center;
    line-height: 0;
    pointer-events: none;
  }

  .boston {
    width: 100%;
  }

  .searchWrapper {
    margin: 10px;
  }

  /* Desktop. */
  @media only screen and (min-width: 767px) {
    .bostonContainer {
      transition-property: opacity;
      transition-delay: 1s !important;
      transition-duration: 0.75s;
    }
  }

  /* Title and subtitle area. Desktop only. */
  @media only screen and (min-width: 767px) {
    .topHeader {
      padding: 3em 0 !important;
      transition-timing-function: cubic-bezier(0.46, 0.03, 0.47, 1.11);
      transition-delay: 1s !important;
      transition-duration: 0.75s;
      transition-property: transform;
      overflow: hidden;
    }

    .resultsContainer {
      transition-duration: 0.75s;
      transition-property: transform;
      transition-delay: 1s !important;
      transition-timing-function: cubic-bezier(0.46, 0.03, 0.62, 0.98);
    }
  }

  /* Title and subtitle area. Mobile only. */
  @media only screen and (max-width: 767px) {
    .topHeader {
      padding-bottom: 20px !important;
      height: 100vh;
      overflow: hidden;
    }
  }

  /* Github corner. */
  .githubCornerContainer {
    fill: Colors.$Light_Grey;
    color: Colors.$White;
    position: absolute;
    top: 0;
    border: 0;
    right: 0;
    z-index: Indexes.$Nine;
    display: none;
  }

  .signInButtonContainer {
    position: absolute;
    top: 0;
    right: 0;
    z-index: Indexes.$One;
    margin-top: 20px;
  }

  .sandboxLogoContainer {
    position: absolute;
    top: 0;
    border: 0;
    left: 0;
    z-index: Indexes.$Nine;
    margin-left: 15px;
    margin-top: 15px;
    width: 30px;

    @media only screen and (min-width: 767px) {
      margin-left: 20px;
      margin-top: 20px;
    }

    @media only screen and (min-width: 1025px) {
      width: 47px;
    }
  }

  .octopusArm {
    transform-origin: 130px 106px;
  }

  /* Override the blue caused by the <a> tag. */
  .githubCornerContainer:hover {
    color: Colors.$White;
  }

  /* Below here is actually used. */
  .githubCornerContainer:hover .octopusArm {
    animation: octocat-wave 560ms ease-in-out;
  }

  @keyframes octocat-wave {
    0%,
    100% {
      transform: rotate(0);
    }

    20%,
    60% {
      transform: rotate(-25deg);
    }

    40%,
    80% {
      transform: rotate(10deg);
    }
  }

  @media (max-width: 500px) {
    .githubCornerContainer .octopusArm {
      animation: octocat-wave 560ms ease-in-out;
    }

    .githubCornerContainer:hover .octopusArm {
      animation: none;
    }
  }

  /* No results text. */
  .noResultsContainer {
    font-size: 19px;
    padding-top: 30px;
    text-align: center;
    padding-bottom: 100px;
  }

  .noResultsInputText {
    display: inline-block !important;
    padding: 5px !important;
    padding-left: 9px !important;
    padding-right: 9px !important;
    font-size: inherit !important;
  }

  .noResultsBottomLine {
    padding-top: 7px;
  }

  /* Styles on tooltips that appear on desktop in the ClassPanel.js. Need to pass in the styles once, in Home.js, and not in every ClassPanel that appears. */
  .listIconTooltip {
    font-size: 14px !important;
    z-index: Indexes.$Fourteen;
    padding-top: 6px !important;
    padding-bottom: 6px !important;
    padding-left: 10px !important;
    padding-right: 10px !important;
    border-radius: 7px !important;
    white-space: nowrap !important;
  }

  /* For when Aoun shows up. */
  .aounContainer {
    text-align: center;
    padding-bottom: 40px;
  }

  .aounContainer > img {
    box-shadow: 0 0 20px 12px Colors.$Light_Red;
    max-width: 100%;
  }

  .hitEnterToSearch {
    display: block;
    padding-top: 14px;
    color: Colors.$Grey;
    visibility: hidden;
  }

  .hitEnterToSearchVisible {
    visibility: visible;
  }

  .attentionContainer {
    display: none;
    max-width: 95%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
    line-height: 25px;
    transition: opacity 0.6s;
    transition-delay: 1s;
    margin-bottom: -16px;
    font-weight: 200;
    color: Colors.$Light_Grey;
    font-size: 21px;

    .getInvolvedText {
      color: Colors.$Grey;
      cursor: pointer;
    }

    .getInvolvedText:hover {
      border-bottom: 1px solid Colors.$Grey;
    }

    .getInvolvedTextHidden {
      cursor: initial;
      pointer-events: none;
    }

    p {
      margin: 0;
      pointer-events: initial;
    }

    p:last-child {
      font-size: 20px;
    }

    p:last-child:hover {
      font-size: 20px;
      // text-decoration: underline;
    }
  }

  /* Media query to target very small devices such as iPhone 4 */
  @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
    .title {
      font-size: 38px;
      margin-top: 600px;
    }

    .subtitle {
      font-size: 18px !important;
    }

    .attentionContainer {
      font-size: 18px;
      margin-top: 0;

      .getInvolvedText {
        font-size: 16px;
      }

      p:last-of-type {
        padding-bottom: 500px;
      }
    }
  }
}

